# JSScript

./: .gitignore  CHANGELOG.md  LICENSE  jsscript.cabal
.github/workflows/: haskell.yml
app/: Main.hs
bot/: Main.hs
src/Language/: JSScript.hs
src/Language/JSScript/: AST.hs  Interpreter.hs  Parser.hs
stdlib/: prelude.jss
